[build-system]
requires = ["flit_core>=3.12"]
build-backend = "flit_core.buildapi"

[project]
name = "keggtangled"
dynamic = ["version"]
description = "A KEGG tool for managing compounds, reactions, and pathways"
readme = "README.md"
authors = [
    { name = "Elisa Márquez Zavala", email = "emarquez@lcg.unam.mx" },
]
maintainers = [
    { name = "Elisa Márquez Zavala", email = "emarquez@lcg.unam.mx" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "biopython>=1.79",
]

[project.urls]
Homepage = "https://github.com/emarquezz/KEGGtangled"
Repository = "https://github.com/emarquezz/KEGGtangled"
Issues = "https://github.com/emarquezz/KEGGtangled/issues"

[tool.flit.module]
name = "keggtangled"